[package]
name = "hush"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mel_spec = { git = "https://github.com/wavey-ai/mel-spec.git" }
whisper = { git = "https://github.com/wavey-ai/whisper-burn.git", rev = "6f726a5" }
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
crossbeam-channel = "0.5.8"
structopt = "0.3.26"
bytes = "1.4.0"
tracing-subscriber = { version = "^0.3.16", features = ["env-filter"] }
serde_json = "1.0.105"
pretty_env_logger = "0.5"
serde = { version = "1.0", features = ["derive"] }
url = "2.2"
http = "0.2"
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
